infra/k8s/auth-mongo-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
