infra/k8s/expiration-redis-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379
    targetPort: 6379
