infra/k8s/payments-mongo-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
spec:
  selector:
    app: payments-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
