infra/k8s/tickets-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 3000
    targetPort: 3000
